# 8086Interpreter

./: CMakeLists.txt  Doxyfile  readme.md
include/8086/cpu/: CPU.h  Stack.h  StackExceptions.h
include/8086/register/: DataSegmentRegister.h  FlagsRegister.h  Register.h
include/interpreter/: Command.h  commandHandler.h  commandHandlerExceptions.h
src/: main.cpp
src/8086/cpu/: CPU.cpp  Stack.cpp  StackExceptions.cpp
src/8086/register/: Register.cpp
src/interpreter/: commandHandler.cpp  commandHandlerExceptions.cpp
tests/CPUTest/: math.cpp
tests/StackTest/: main.cpp
